<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#C0392B"
        android:padding="10dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:autofillHints=""
            android:hint="@string/enter"
            android:inputType="text" />

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/enterButton" />
    </LinearLayout>

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2E4053"
        android:padding="15dp"
        android:text="@string/title2"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="347dp"
        android:background="#2E4053">

        <Button
            android:id="@+id/product1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginStart="36dp"
            android:text="@string/product1" />

        <Button
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/count1" />

        <Button
            android:id="@+id/product2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginStart="36dp"
            android:text="@string/product2" />

        <Button
            android:id="@+id/count2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/count2" />

        <Button
            android:id="@+id/product3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginStart="36dp"
            android:text="@string/product3" />

        <Button
            android:id="@+id/count3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/count3" />

        <Button
            android:id="@+id/product4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginStart="36dp"
            android:text="@string/product4" />

        <Button
            android:id="@+id/count4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/count4" />

        <Button
            android:id="@+id/product5"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginStart="36dp"
            android:text="@string/product5" />

        <Button
            android:id="@+id/count5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:text="@string/count5" />

        <Button
            android:id="@+id/product6"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_marginStart="36dp"
            android:text="@string/product6" />

        <Button
            android:id="@+id/count6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:text="@string/count6" />
    </GridLayout>

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/clear"
        android:textStyle="bold"
        android:textSize="15sp" />

</LinearLayout>

